Fix list item alignment issue

--- a/src/style/docs.less
+++ b/src/style/docs.less
@@ -276,12 +276,10 @@ h4.class-name {
 }
 
 .ground-wire {
-  display: inline;
   font-weight: bold;
 }
 
 .hot-wire {
-  display: inline;
   font-weight: bold;
   color: #CC0000;
 }
